# yeah

./: .env  .envrc  .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  fly.toml  go.mod  go.sum  justfile
.github/: dependabot.yml
.github/workflows/: main.yaml  main.yml
cmd/api/: main.go
cmd/cli/: main.go
cmd/data/: main.go
cmd/yeah/: main.go
internal/api/: api.go  middleware.go  root.go  search.go  vendors.go
internal/api/templates/: root.html
internal/cli/: cli.go
internal/data/: data.go
internal/decode/: decode.go
internal/encode/: encode.go  sources.go
internal/oui/: oui.go  vendor.go
internal/output/: html.go  json.go  output.go  table.go
internal/tracing/: tracing.go
internal/vendors/: vendors.go  vendors_test.go
src/: lib.rs  main.rs
