[package]
name = "yeah"
version = "0.2.2"
description = "CLI tool to return the vendor name for a given MAC address"
authors = ["Raymond Douglas <r@rymnd.org>"]
license-file = "LICENSE"
documentation = "https://github.com/raylas/yeah"
homepage = "https://github.com/raylas/yeah"
repository = "https://github.com/raylas/yeah"
edition = "2021"

[profile.release]
incremental = false 
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[dependencies]
pico-args = "0.5.0"
prettytable-rs = "^0.10"
regex = "1"
reqwest = { version = "0.11.26", features = ["blocking"] }
